[gd_scene load_steps=17 format=3 uid="uid://yvpufqx5c6n6"]

[ext_resource type="Script" path="res://character.gd" id="1_ljweg"]
[ext_resource type="PackedScene" uid="uid://5plurn2mh5im" path="res://gun.tscn" id="2_bgpnj"]
[ext_resource type="Texture2D" uid="uid://7bo35hisyuyy" path="res://panorama_image1.png" id="3_uk7r0"]
[ext_resource type="PackedScene" uid="uid://c5v3m7bqpohcd" path="res://AR70.tscn" id="4_32a4m"]
[ext_resource type="Script" path="res://PlayerCamera.gd" id="4_75hru"]
[ext_resource type="Texture2D" uid="uid://bt3b0pkq4n36q" path="res://muzzle_flash_fire.png" id="6_3vhtp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j3w6v"]
size = Vector3(1, 3, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ojvp1"]
panorama = ExtResource("3_uk7r0")

[sub_resource type="Sky" id="Sky_isu2r"]
sky_material = SubResource("PanoramaSkyMaterial_ojvp1")

[sub_resource type="Environment" id="Environment_3bgt3"]
background_mode = 2
sky = SubResource("Sky_isu2r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8temu"]
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n3u2l"]
transparency = 4
blend_mode = 1
albedo_color = Color(1, 1, 1, 0.360784)
albedo_texture = ExtResource("6_3vhtp")
emission_enabled = true
emission = Color(1, 0.419608, 0.0823529, 1)
emission_energy_multiplier = 3.0
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_uyvx4"]
material = SubResource("StandardMaterial3D_n3u2l")
size = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vq7sj"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h11fn"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mb56s"]
albedo_color = Color(0, 0, 0, 1)

[node name="Character" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_ljweg")
jump_power = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_j3w6v")

[node name="Body" type="Node3D" parent="."]

[node name="Body" type="CSGCylinder3D" parent="Body"]
visible = false
radius = 0.4

[node name="LeftShoulder" type="Node3D" parent="Body/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.668555, 0)
visible = false

[node name="LeftArm" type="CSGBox3D" parent="Body/Body/LeftShoulder"]
transform = Transform3D(0.938962, -0.34402, 0, 0.34402, 0.938962, 0, 0, 0, 1, 0.7, 0.3, 0)
size = Vector3(1.545, 0.2, 0.2)

[node name="RightShoulder" type="Node3D" parent="Body/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.668555, 0)
visible = false

[node name="RightArm" type="CSGBox3D" parent="Body/Body/RightShoulder"]
transform = Transform3D(0.39197, 0.143441, 0.908727, -0.34366, 0.939094, 0, -0.85338, -0.312293, 0.417391, -0.245069, 0.3, 0.673747)
size = Vector3(1.545, 0.2, 0.2)

[node name="OutsideGun" parent="Body/Body/RightShoulder/RightArm" instance=ExtResource("2_bgpnj")]
transform = Transform3D(-0.39197, -0.34366, 0.85338, -0.143441, 0.939094, 0.312293, -0.908727, 7.45058e-09, -0.417391, -0.768434, -0.00182325, 0.067402)

[node name="Neck" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44196, 0)

[node name="Head" type="Node3D" parent="Body/Neck"]

[node name="Camera3D" type="Camera3D" parent="Body/Neck/Head"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
environment = SubResource("Environment_3bgt3")
current = true
fov = 88.6
script = ExtResource("4_75hru")

[node name="ShootRayCast" type="RayCast3D" parent="Body/Neck/Head/Camera3D"]
transform = Transform3D(1, -1.50996e-07, 1.50996e-07, 1.50996e-07, -4.37114e-08, -1, 1.50996e-07, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -500, 0)
collision_mask = 11

[node name="PickUpRayCast" type="RayCast3D" parent="Body/Neck/Head/Camera3D"]
transform = Transform3D(1, -1.50996e-07, 1.50996e-07, 1.50996e-07, -4.37114e-08, -1, 1.50996e-07, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -5, 0)
collision_mask = 3

[node name="AR70" parent="Body/Neck/Head/Camera3D" instance=ExtResource("4_32a4m")]
transform = Transform3D(0.0717091, 0, 0.255113, 0, 0.265, 0, -0.255113, 0, 0.0717091, 0.65, -0.3, -0.313)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Body/Neck/Head/Camera3D/AR70"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.89118, 0, -0.0614214)
emitting = false
amount = 5
lifetime = 0.05
one_shot = true
visibility_aabb = AABB(-0.691888, -0.613947, -0.687934, 1.38378, 1.22789, 1.37587)
process_material = SubResource("ParticleProcessMaterial_8temu")
draw_pass_1 = SubResource("QuadMesh_uyvx4")

[node name="Head" type="CSGBox3D" parent="Body/Neck/Head"]
visible = false

[node name="RightEye" type="CSGBox3D" parent="Body/Neck/Head/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.290317, 0.283998, 0.527178)
size = Vector3(0.1, 0.1, 0.1)
material = SubResource("StandardMaterial3D_vq7sj")

[node name="LeftEye" type="CSGBox3D" parent="Body/Neck/Head/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.271095, 0.283998, 0.527178)
size = Vector3(0.1, 0.1, 0.1)
material = SubResource("StandardMaterial3D_h11fn")

[node name="Mouth" type="CSGBox3D" parent="Body/Neck/Head/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.267332, 0.527178)
size = Vector3(0.8, 0.1, 0.1)
material = SubResource("StandardMaterial3D_mb56s")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
